in/03-ingressroute-crossprovider-traefikservice-withnamespace.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test5.route
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`server`) && PathPrefix(`/toto`)
    kind: Rule
    services:
    - name: wrr2@file
      kind: TraefikService
    - name: mirror2
      namespace: toto
      kind: TraefikService
