in/03-ingressroute-crossprovider-traefikservice.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test4.route
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`server`) && PathPrefix(`/cross`)
    kind: Rule
    services:
    - name: wrr1@file
      kind: TraefikService
