in/03-ingressroute-simple-traefikservice.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test3.route
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`server`) && PathPrefix(`/foo`)
    kind: Rule
    services:
    - name: wrr1
      kind: TraefikService
