in/03-ingressroute-witherrorpage.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: errorpage
spec:
  errors:
    status:
      - 500-599
    query: /index.html
    service:
      name: webserver
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: testerrorpage.route
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`whoami`)
    kind: Rule
    priority: 200
    services:
    - name: whoami@kubernetescrd
      port: 80
    middlewares:
      - name: errorpage
