in/03-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test.route
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`server`) && PathPrefix(`/bar`)
    kind: Rule
    priority: 12
    services:
    - name: whoami
      port: 80
